reddit link is added

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,9 @@ minima:
     - title: mefazm
       icon: linkedin
       url: "https://www.linkedin.com/in/mefazm/"
+    - title: Dull_Programmer6705
+      icon: reddit
+      url: "https://www.reddit.com/user/Dull_Programmer6705/"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
